# HardwareMonitor

./: .gitignore  .gitmodules  HardwareMonitor.sln
HardwareMonitor/: Controller.cpp  Controller.h  HardwareMonitor.vcxproj  HardwareMonitor.vcxproj.filters  HardwareThreadWorker.cpp  HardwareThreadWorker.h  HardwareTreeModel.cpp  HardwareTreeModel.h  SensorFormatter.h  TreeViewController.cpp  TreeViewController.h  Worker.cpp  Worker.h  main.cpp  main.qml  qml.qrc  res.qrc
HardwareMonitor/DataMappers/: IconRegistry.cpp  IconRegistry.h  SensorFormatter.cpp  SensorFormatter.h
HardwareMonitor/HardwareTree/: HardwareTask.cpp  HardwareTask.h  HardwareTreeController.cpp  HardwareTreeController.h  HardwareTreeModel.cpp  HardwareTreeModel.h
HardwareMonitor/Qml/: CustomScrollBar.qml  HardwareTreeDelegate.qml  HardwareTreeView.qml  TreeConnector.qml  main.qml
HardwareMonitor/Resources/: HardwareMonitor.manifest  app_icon.rc
HardwareMonitorClient/: CMakeLists.txt
HardwareMonitorClient/Client/: CMakeLists.txt
HardwareMonitorLib/: Hardware.h  HardwareConversion.cpp  HardwareConversion.h  HardwareData.h  HardwareDataExtractor.cpp  HardwareDataExtractor.h  HardwareMonitorLib.cpp  HardwareMonitorLib.h  HardwareMonitorLib.vcxproj  HardwareMonitorLib.vcxproj.filters  HardwareType.h
HardwareMonitorLib/LibreHardwareMonitorLib/: ComputerWrapper.h
HardwareMonitorLib/ManageCode/: HardwareConverter.cpp  HardwareConverter.h
HardwareMonitorLib/ManageCodeWrappers/: UpdateVisitorWrapper.h
HardwareMonitorLib/UpdateVisitor/: UpdateVisitor.cpp  UpdateVisitorWrapper.h
(+23 files in other folders)
